tests/baselines/reference/parserParameterList3.errors.txt
parserParameterList3.ts(2,9): error TS1016: A required parameter cannot follow an optional parameter.


==== parserParameterList3.ts (1 errors) ====
    class C {
      F(A?, B) { }
            ~
!!! error TS1016: A required parameter cannot follow an optional parameter.
    }